--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Valentine's Day Flip Book</title>
-  <audio autoplay loop>
+ 
+<link rel="stylesheet" href="valentines.css">
+</head>
+<body>
+ <audio controls loop>
 	  <source src="so easy (to fall in love).mp3"
 		  type="audio/mpeg">
 	  Your browser does not support the audio element.
   </audio>
-<link rel="stylesheet" href="valentines.css">
-</head>
-<body>
-
+	
   <div id="hedlinecontainer">
     <div id="shine">Happy Valentine's Day
 	Mama & Papa💞</div>
@@ -186,5 +187,6 @@ body {
 
 
   
+
 
 
